--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/css/style.css')
+    link(rel="stylesheet", href="/css/style.css")
+    block scripts
   body
     block header
       include header.jade
